shrunk pedal img on home page a bit to prevent overflow

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -143,6 +143,7 @@
 	justify-content: center;
 	align-items: center;
 	background-color: var(--body-background-color);
+	overflow: hidden;
 }
 .effectText {
 	color: var(--main-red-color);
